--- a/i_css/red_social/perfil/article.css
+++ b/i_css/red_social/perfil/article.css
@@ -3,25 +3,70 @@
     Created on : 26 dic. 2020, 17:07:31
     Author     : neury-dev
 */
-/*.n-grid > .area-3 > :nth-child(2) {
-    margin-top: 3em;
-}*/
-.n-grid > .area-3 > section > article {
-    margin-top: 3em;
+.n-grid > .area-3 {
+    padding-bottom: 3em;
 }
-.n-grid > .area-3 > section > article > .articulo-head {
+.n-grid > .area-3 > div { margin: 3em 6em 0em 6em; }
+.n-grid > .area-3 > div > article { margin-top: 3em; }
+.n-grid > .area-3 > div > article > .articulo-head {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
-.n-grid > .area-3 > section > article > .articulo-head > section > img.foto {
+.n-grid > .area-3 > div > article > .articulo-head > section > img.foto {
+    float: left;
+    width: 48px;
+    height: 48px;
+    margin-right: 0.10em;
+    border-radius: 50%;
+}
+.n-grid > .area-3 > div > article > .articulo-head > section > div {
+    float: left;
+    position: relative;
+    top: 0.50em;
+}
+.n-grid > .area-3 > div > article > .articulo-head > section > div > span {
+    float: left;
+    color: var(--n-color-dos-uno);
+    font-size: 0.70em;
+}
+.n-grid > .area-3 > div > article > .articulo-head > section > div > h6 { margin: 0; }
+.n-grid > .area-3 > div > article > .articulo-head > section > div > h6 > span {
+    color: var(--n-color-dos-uno);
+    font-weight: normal;
+    font-size: 0.70em;
+    transform: scaleY(0); 
+    letter-spacing: normal;
+}
+.n-grid > .area-3 > div > article > .articulo-head > section > button { background-color: var(--n-color); }
+.n-grid > .area-3 > div > article > .articulo-body { margin: 0em 0em 1em 0em; }
+.n-grid > .area-3 > div > article > .articulo-body > img { border-radius: var(--n-radio); }
+.n-grid > .area-3 > div > article > .articulo-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;  
+}
+.n-grid > .area-3 > div > article > .articulo-footer  > section > button,
+.n-grid > .area-3 > div > article > .articulo-footer  > section > form > button {
+    background-color: var(--n-color); 
+}
+.n-grid > .area-3 > div > article > .articulo-footer  > section > span { margin: 0em 0.70em 0em 0em; }
+/*.n-grid > .area-3 > .publicacion > article {
+    margin-top: 3em;
+}
+.n-grid > .area-3 >  .publicacion > article > .articulo-head {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.n-grid > .area-3 >  .publicacion > article > .articulo-head > section > img.foto {
     float: left;
     width: 3em;
     height: 3em;
     margin-right: 0.10em;
     border-radius: 50%;
 }
-.n-grid > .area-3 > section > article > .articulo-head > section > span {
+.n-grid > .area-3 >  .publicacion > article > .articulo-head > section > span {
     float: left;
     position: relative;
     top: 1.40em;
@@ -29,8 +74,8 @@
     font-family: var(--n-fuente-dos);
     font-size: 0.70em;
 }
-.n-grid > .area-3 > section > article > .articulo-head > section > h2 {
-    /*float: left;*/
+.n-grid > .area-3 >  .publicacion > article > .articulo-head > section > h2 {
+    float: left;
     position: relative;
     top: 1.20em;
     color: var(--n-color-dos);
@@ -38,47 +83,47 @@
     font-size: 0.90em;
     font-weight: bold;
 }
-/*.n-grid > .area-3 > section > article > .articulo-head > section > span {
+.n-grid > .area-3 >  .publicacion > article > .articulo-head > section > span {
     color: var(--n-color-dos);
     font-family: var(--n-fuente-dos);
     font-size: 0.70em;
-}*/
-.n-grid > .area-3 > section > article > .articulo-head > section > button {
+}
+.n-grid > .area-3 >  .publicacion > article > .articulo-head > section > button {
     color: var(--n-color-dos);
     background-color: var(--n-color);
     font-size: 0.90em;
     border: none;
 }
-.n-grid > .area-3 > section > article > .articulo-body {
+.n-grid > .area-3 >  .publicacion > article > .articulo-body {
     margin: 0em 0em 1em 0em;
 }
-.n-grid > .area-3 > section > article > .articulo-body > h3 {
+.n-grid > .area-3 >  .publicacion > article > .articulo-body > h3 {
     color: var(--n-color-dos);
     font-family: var(--n-fuente-dos);
     font-size: 0.90em;
     font-weight: bold;
 }
-.n-grid > .area-3 > section > article > .articulo-body > p {
+.n-grid > .area-3 >  .publicacion > article > .articulo-body > p {
     color: var(--n-color-dos);
     font-family: var(--n-fuente-dos);
     font-size: 0.90em;
 }
-.n-grid > .area-3 > section > article > .articulo-body > img {
-    /*margin: 0em 0em 1em 0em;*/
+.n-grid > .area-3 >  .publicacion > article > .articulo-body > img {
+    margin: 0em 0em 1em 0em;
 }
-.n-grid > .area-3 > section > article > .articulo-footer {
+.n-grid > .area-3 >  .publicacion > article > .articulo-footer {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;  
 }
-.n-grid > .area-3 > section > article > .articulo-footer  > section > button {
+.n-grid > .area-3 >  .publicacion > article > .articulo-footer  > section > button {
     color: var(--n-color-dos);
     background-color: var(--n-color);
     font-size: 1.30em;
     border: none;
 }
-.n-grid > .area-3 > section > article > .articulo-footer  > section > span {
+.n-grid > .area-3 >  .publicacion > article > .articulo-footer  > section > span {
     color: var(--n-color-dos);
     font-size: 0.90em;
     margin: 0em 0.70em 0em 0em;
-}
+}*/
