--- a/i_css/red_social/perfil/nav.css
+++ b/i_css/red_social/perfil/nav.css
@@ -8,16 +8,16 @@
 .n-grid > .area-2 > nav > ul { padding: 0; list-style: none; }
 .n-grid > .area-2 > nav > ul > li {
     display: inline;
-    font-family: var(--n-fuente);
+    font-weight: bold;
     font-size: 0.80em;
 }
 .n-grid > .area-2 > nav > ul > li + li:before {
     padding: 0.20em;
-    color: var(--n-color-dos);
+    /*color: var(--n-color-dos);*/
     content: "/\00a0";
 }
-.n-grid > .area-2 > nav > ul > li a { color: var(--n-color-dos); outline: none;}
+.n-grid > .area-2 > nav > ul > li a { color: var(--n-color-dos); }
 .n-grid > .area-2 > nav > ul > li a:hover { 
     color: var(--n-color-dos-uno); 
-    text-decoration: none; 
+    /*text-decoration: none;*/ 
 }
