--- a/i_css/i/root.css
+++ b/i_css/i/root.css
@@ -17,7 +17,7 @@ body {
     margin: 0 !important;
     overflow-x: hidden !important;
 }
-a { text-decoration: none; }
+a { text-decoration: none; outline: none; }
 a, 
 button, 
 select { 
