--- a/i_css/red_social/perfil/perfil.css
+++ b/i_css/red_social/perfil/perfil.css
@@ -14,7 +14,8 @@
     position: absolute;
     top: 6em;
     left: 2em;
-    width: calc(100% - 4em);
+    /*width: calc(100% - 4em);*/
+    width: 100%;
 }
 /*.n-grid > section { border: 0.10em solid var(--n-color-dos); }*/ 
 .n-grid > .area-1 { grid-area: 1 / 1 / span 1 / span 1; }
@@ -27,7 +28,7 @@
     object-fit: cover;
     width: 50%;
     height: 20em;
-    border-radius: 1em;
+    border-radius: var(--n-radio);
 }
 .n-grid > .area-1 > main > .contenedor {
    position: relative;
@@ -73,9 +74,8 @@
     border-radius: 50% 50% 50% 0.20em;
     cursor: pointer;
 }
-/*
-    Cuadricula 2
-*/
+/* Perfil > maquetado
+--------------------------------------------------------------------------------*/
 .n-grid > .area-4 {
     display: grid;
     grid-template-columns: 50% 50%;
@@ -84,9 +84,11 @@
 .n-grid > .area-4 > .sesion-1 { grid-area: 1 / 1 / span 1 / span 2; }
 .n-grid > .area-4 > .sesion-2 { grid-area: 1 / 2 / span 1 / span 1; }
 .n-grid > .area-4 > .sesion-3 { grid-area: 2 / 2 / span 1 / span 1; }
+/* Perfil > contenido
+--------------------------------------------------------------------------------*/
 .n-grid > .area-4 > section > h2 {
-    color: var(--n-color-dos);
-    font-family: var(--n-fuente-tres);
+    /*color: var(--n-color-dos);*/
+    /*font-family: var(--n-fuente-tres);*/
     font-size: 1.10em;
 }
 .n-grid > .area-4 > .sesion-1 > :nth-child(3) {
@@ -95,12 +97,12 @@
     text-decoration: underline;
 }
 .n-grid > .area-4 > section > h4 {
-    color: var(--n-color-dos);
-    font-family: var(--n-fuente-dos);
-    font-size: 0.80em;
+    /*color: var(--n-color-dos);*/
+    /*font-family: var(--n-fuente-dos);*/
+    /*font-size: 0.80em;*/
 }
 .n-grid > .area-4 > section > p {
-    color: var(--n-color-dos);
-    font-family: var(--n-fuente-dos);
-    font-size: 0.80em;
+    /*color: var(--n-color-dos);*/
+/*    font-family: var(--n-fuente-dos);*/
+    /*font-size: 0.80em;*/
 }
