--- a/i_css/red_social/perfil/editar.css
+++ b/i_css/red_social/perfil/editar.css
@@ -1,55 +1,38 @@
-@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 31 dic. 2020, 10:27:51
     Author     : neury-dev
 */
-.n-grid > .area-3 > :nth-child(2) {
+.n-grid > .area-3 > :nth-child(2),
+.n-grid > .area-3 > :nth-child(3), 
+.n-grid > .area-3 > :nth-child(4) {
     margin-top: 8em;
 }
-.n-grid > .area-3 > section {
-    margin: 0em 6em 0em 6em;
-}
-.n-grid > .area-3 > section > h3 {
-    color: var(--n-color-dos);
-    font-family: var(--n-fuente-dos);
-    font-size: 1em;
-    border-bottom: 0.10em solid var(--n-color-dos-uno);
-}
-/*.n-grid > .area-3 > section > form {
-
-}*/
-.n-grid > .area-3 > section > form > label {
-    color: var(--n-color-dos);
-    font-family: var(--n-fuente-dos);
+.n-grid > .area-3 > section { margin: 0em 6em 0em 6em; }
+.n-grid > .area-3 > section > h5 { border-bottom: 0.10em solid var(--n-color-dos-uno); }
+.n-grid > .area-3 > section > form > label, 
+.n-grid > .area-3 > section > form > input, 
+.n-grid > .area-3 > section > form > select,
+.n-grid > .area-3 > section > form > button {
     font-size: 0.80em;
-    font-weight: bold;
 }
-.n-grid > .area-3 > section > form > input, .n-grid > .area-3 > section > form > select {
+.n-grid > .area-3 > section > form > input, 
+.n-grid > .area-3 > section > form > select {
     color: var(--n-color);
-    background-color: var(--n-color-dos-uno);
-    font-family: var(--n-fuente-dos);
-    font-size: 0.80em;
+    background-color: var(--n-color-tres-uno);
     width: 100%;
     margin-bottom: 1.50em;
-    border: none;
-    border-radius: 0.50em;
-    padding: 0.625em;
+    border-radius: var(--n-radio);
+    padding: var(--n-relleno);
 }
-.n-grid > .area-3 > section > form > input:focus {
-    color: var(--n-color);
-    background-color: var(--n-color-tres);
-    outline: none;
-}
+.n-grid > .area-3 > section > form > input:focus { color: var(--n-color); background-color: var(--n-color-tres); }
 .n-grid > .area-3 > section > form > button {
     color: var(--n-color);
     background-color: var(--n-color-dos);
-    font-family: var(--n-fuente);
-    font-size: 0.90em;
+    font-weight: bold;
     width: 100%;
     margin-top: 0.20em;
-    border: none;
-    border-radius: 0.50em;
-    padding: 0.50em;
+    border-radius: var(--n-radio);
+    padding: var(--n-relleno);
 }
 .n-grid > .area-3 > section > form > button:hover {
     color: var(--n-color-dos);
