--- a/i_css/red_social/perfil/perfil.css
+++ b/i_css/red_social/perfil/perfil.css
@@ -86,8 +86,7 @@
 /* Perfil > contenido
 --------------------------------------------------------------------------------*/
 .n-grid > .area-4 > section > h2 {
-    /*color: var(--n-color-dos);*/
-    /*font-family: var(--n-fuente-tres);*/
+    font-family: var(--n-fuente);
     font-size: 1.10em;
 }
 .n-grid > .area-4 > .sesion-1 > :nth-child(3) {
