--- a/i_css/red_social/main.css
+++ b/i_css/red_social/main.css
@@ -1,9 +1,8 @@
-@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 20 dic. 2020, 20:26:41
     Author     : neury-dev
 */
-.n-grid > .area-2 > main {
+/*.n-grid > .area-2 > main {
     margin: 0em 6em 0em 6em;
 }
 .n-grid > .area-2 > main > p {
@@ -19,8 +18,8 @@
     color: var(--n-color);
     background-color: inherit;
     float: left;
-    /*border: none;*/
-    /*outline: none;*/
+    border: none;
+    outline: none;
     padding: 14px 16px;
     font-size: 1.0625em;
 }
@@ -34,21 +33,21 @@
     border-radius: 2em;
 }
 
-/* Style the tab content */
+ Style the tab content 
 .tabcontent {
     display: none;
     padding: 6px 12px;
     -webkit-animation: fadeEffect 1s;
     animation: fadeEffect 1s;
 }
-/* Style the close button */
+ Style the close button 
 .topright {
     float: right;
     font-size: 28px;
 }
 
 .topright:hover {color: red;}
-/* Fade in tabs */
+ Fade in tabs 
 @-webkit-keyframes fadeEffect {
     from {opacity: 0;}
     to {opacity: 1;}
@@ -67,7 +66,8 @@
     font-size: 0.80em;
     font-weight: bold;
 }
-.n-grid > .area-2 > main > div > #form-articulo > #titulo, .n-grid > .area-2 > main > div > #form-articulo > #articulo {
+.n-grid > .area-2 > main > div > #form-articulo > #titulo, 
+.n-grid > .area-2 > main > div > #form-articulo > #articulo {
     color: var(--n-color-dos);
     font-family: var(--n-fuente-dos);
     font-size: 0.80em;
@@ -77,7 +77,8 @@
     border-radius: 0.50em;
     padding: 0.625em;
 }
-.n-grid > .area-2 > main > div > #form-articulo > #titulo:focus, .n-grid > .area-2 > main > div > #form-articulo > #articulo:focus {
+.n-grid > .area-2 > main > div > #form-articulo > #titulo:focus, 
+.n-grid > .area-2 > main > div > #form-articulo > #articulo:focus {
     color: var(--n-color);
     background-color: var(--n-color-tres);
     outline: none;
@@ -105,7 +106,8 @@
     padding: 0.50em;
     cursor: not-allowed;
 }
-.n-grid > .area-2 > main > div > form > #subir, .n-grid > .area-2 > main > div > form > #subir-archivo {
+.n-grid > .area-2 > main > div > form > #subir, 
+.n-grid > .area-2 > main > div > form > #subir-archivo {
     color: var(--n-color);
     background-color: var(--n-color-dos);
     font-family: var(--n-fuente);
@@ -116,8 +118,9 @@
     border-radius: 0.50em;
     padding: 0.50em;
 }
-.n-grid > .area-2 > main > div > form >  #subir:hover, .n-grid > .area-2 > main > div > form > #subir-archivo:hover {
+.n-grid > .area-2 > main > div > form >  #subir:hover, 
+.n-grid > .area-2 > main > div > form > #subir-archivo:hover {
     color: var(--n-color-dos);
     background-color: var(--n-color-tres);
     text-shadow: var(--n-sombra-de-texto);
-}
+}*/
