--- a/i_css/red_social/perfil/editar.css
+++ b/i_css/red_social/perfil/editar.css
@@ -4,7 +4,8 @@
 */
 .n-grid > .area-3 > :nth-child(2),
 .n-grid > .area-3 > :nth-child(3), 
-.n-grid > .area-3 > :nth-child(4) {
+.n-grid > .area-3 > :nth-child(4), 
+.n-grid > .area-3 > :nth-child(5) {
     margin-top: 8em;
 }
 .n-grid > .area-3 > section { margin: 0em 6em 0em 6em; }
