--- a/i_css/red_social/perfil/menu.css
+++ b/i_css/red_social/perfil/menu.css
@@ -48,24 +48,21 @@
 .n-grid > .area-3 > section > div > form {
     margin-top: 1.50em;
 }
-.n-grid > .area-3 > section > .contenido > #form-articulo > .etiqueta {
-    color: var(--n-color-dos);
-    font-family: var(--n-fuente-dos);
+.n-grid > .area-3 > section > .contenido > #todo > .etiqueta {
     font-size: 0.80em;
-    font-weight: bold;
 }
-.n-grid > .area-3 > section > .contenido > #form-articulo > #publicacion {
+.n-grid > .area-3 > section > .contenido > #todo > #publicacion {
     font-size: 0.90em;
     width: 100%;
     margin-bottom: 0.50em;
     border-radius: var(--n-radio);
     padding: var(--n-relleno);
 }
-.n-grid > .area-3 > section > .contenido > #form-articulo > #publicacion:focus {
+.n-grid > .area-3 > section > .contenido > #todo > #publicacion:focus {
     color: var(--n-color);
     background-color: var(--n-color-tres);
 }
-.n-grid > .area-3 > section > .contenido > #form-articulo > #publicacion {
+.n-grid > .area-3 > section > .contenido > #todo > #publicacion {
     resize: none;
 }
 .n-grid > .area-3 > section > .contenido > form > .cargar-archivo {
@@ -87,8 +84,7 @@
     padding: var(--n-relleno);
     cursor: not-allowed;
 }
-.n-grid > .area-3 > section > .contenido > form > #subir, 
-.n-grid > .area-3 > section > .contenido > form > #subir-archivo {
+.n-grid > .area-3 > section > .contenido > form > button[type="submit"] {
     color: var(--n-color);
     background-color: var(--n-color-dos);
     font-weight: bold;
@@ -98,8 +94,7 @@
     border-radius: var(--n-radio);
     padding: var(--n-relleno);
 }
-.n-grid > .area-3 > section > .contenido > form >  #subir:hover, 
-.n-grid > .area-3 > section > .contenido > form > #subir-archivo:hover {
+.n-grid > .area-3 > section > .contenido > form > button[type="submit"]:hover {
     color: var(--n-color-dos);
     background-color: var(--n-color-tres);
     text-shadow: var(--n-sombra-de-texto);
