--- a/i_css/red_social/perfil/chats.css
+++ b/i_css/red_social/perfil/chats.css
@@ -4,34 +4,90 @@
 */
 .n-grid {
     display: grid;
-    grid-template-columns: 20em auto 20em;
+    grid-template-columns: 250px 750px;
     grid-gap: 0.10em;  
     
     position: absolute;
     top: 6em;
-    left: 2em;
-    width: calc(100% - 4em);
+    left: 50%;
+    transform: translateX(-50%);
+    /*width: calc(100% - 4em);*/
+    border-radius: var(--n-radio);
 }
-.n-grid > section { border: 0.10em solid var(--n-color-dos); } 
+/*.n-grid > section { border: 0.10em solid var(--n-color-dos); }*/ 
 .n-grid > .area-1 { grid-area: 1 / 1 / span 2 / span 1; }
 .n-grid > .area-2 { grid-area: 1 / 2 / span 1 / span 1; }
 .n-grid > .area-3 { grid-area: 2 / 2 / span 1 / span 1; }
 .n-grid > .area-3 { display: none; }
-/*
-    * mensajes
-*/
-.container {
-    border: 2px solid #dedede;
-    background-color: #f1f1f1;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px 0;
+
+.n-grid > .area-1 > nav > div {
+    margin-bottom: 2em;
+}
+.n-grid > .area-1 > nav > div > img {
+    float: left;
+    width: 48px;
+    height: 48px;
+    margin-right: 0.10em;
+    border-radius: 50%;
+}
+.n-grid > .area-1 > nav > div > div > form > button {
+    background-color: var(--n-color);
+    font-weight: bold;
+    margin-top: 2em;
+}
+.n-grid > .area-2 > main {
+    background-color: var(--n-color-dos);
+    border-radius: var(--n-radio);
+    padding: 3em;
+}
+.n-grid > .area-2 > main > .yo { color: var(--n-color); }
+.n-grid > .area-2 > main > .yo > img {
+    float: right;
+    width: 24px;
+    height: 24px;
+    margin: 0.10em;
+    border-radius: 50%;
+}
+.n-grid > .area-2 > main > .yo > div > span {
+    float: right; 
+    font-size: 0.60em; 
+}
+.n-grid > .area-2 > main > .yo > div > h6 { 
+    float: right; 
+    font-size: 0.60em; 
+    text-align: right;
+    margin: 0;
+    margin-top: -0.75em;
+}
+.n-grid > .area-2 > main > .yo > div > p {
+    font-size: 0.70em;
+    text-align: right;
+    margin-top: 0.50em;
+    margin-right: 1.50em;
+    border-right: 0.10em solid var(--n-color);
+    padding-right: 1.50em;
+    clear: both;
+}
+.n-grid > .area-2 > main > .usuario { color: var(--n-color); }
+.n-grid > .area-2 > main > .usuario > img {
+    float: left;
+    width: 24px;
+    height: 24px;
+    margin-right: 0.10em;
+    border-radius: 50%;
+}
+.n-grid > .area-2 > main > .usuario > div > span { font-size: 0.60em; }
+.n-grid > .area-2 > main > .usuario > div > h6 { margin: 0; font-size: 0.60em; }
+.n-grid > .area-2 > main > .usuario > div > p {
+    font-size: 0.70em;
+    margin-left: 1.50em;
+    border-left: 0.10em solid var(--n-color);
+    padding-left: 1.50em;
 }
 
-.darker {
-    border-color: #ccc;
-    background-color: #ddd;
-}
+
+
+
 
 .form-container::after, .container::after {
     content: "";
@@ -39,29 +95,6 @@
     display: table;
 }
 
-.container img {
-    float: left;
-    max-width: 60px;
-    width: 100%;
-    margin-right: 20px;
-    border-radius: 50%;
-}
-
-.container img.right {
-    float: right;
-    margin-left: 20px;
-    margin-right:0;
-}
-
-.time-right {
-    float: right;
-    color: #aaa;
-}
-
-.time-left {
-    float: left;
-    color: #999;
-}
 /*
     * formulario
 */
